@@ -41,7 +41,8 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<spring.boot.version>3.4.2</spring.boot.version>
+		<spring.boot.version>3.4.3</spring.boot.version>
+		<spring.graphql.version>1.3.4</spring.graphql.version>
 		<postgresql.version>42.7.5</postgresql.version>
 		<lombok.version>1.18.36</lombok.version>
 		<spotless.version>2.44.2</spotless.version>
@@ -60,6 +61,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.graphql</groupId>
+			<artifactId>spring-graphql</artifactId>
+			<version>${spring.graphql.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
@@ -118,6 +129,7 @@
 							<version>${lombok.version}</version>
 						</path>
 					</annotationProcessorPaths>
+					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
 			<plugin>
